# experiments

./: .gitignore  .gitmodules  README.md
algorithms/common-algo-code/: CMakeLists.txt  README.md  common.cpp
algorithms/common-algo-code/array/: 前缀和数组.cpp
algorithms/common-algo-code/dp/: 背包问题.cpp
algorithms/common-algo-code/graph/: 图的遍历.cpp  并查集.cpp  最小生成树.cpp
algorithms/common-algo-code/sort/: CMakeLists.txt  bubbleSort.cpp  insertSort.cpp  mergeSort.cpp  quickSort.cpp  selectSort.cpp  shellSort.cpp
algorithms/interview/alibaba/: 通义千问暑期实习二面.cpp
algorithms/leetcode/: 1.两数之和.cpp  162.寻找峰值.cpp  217.存在重复元素.cpp  README.md
algorithms/leetcode/0-array/: 316.去除重复字母.cpp  380.o-1-时间插入、删除和获取随机元素.cpp  710.黑名单中的随机数.cpp  870.优势洗牌.cpp
algorithms/leetcode/10-merge-sort/: 315.计算右侧小于当前元素的个数.cpp  327.区间和的个数.cpp  493.翻转对.cpp
algorithms/leetcode/11-quick-sort/: 215.数组中的第k个最大元素.cpp
algorithms/leetcode/2-tree/: 114.二叉树展开为链表.cpp  222.完全二叉树的节点个数.cpp  652.寻找重复的子树.cpp  654.最大二叉树.cpp
algorithms/leetcode/3-queue/: 225.用队列实现栈.cpp  README.md
algorithms/leetcode/4-stack/: 20.有效的括号.cpp  232.用栈实现队列.cpp  README.md
algorithms/leetcode/5-sliding-window/: 1234.替换子串得到平衡字符串.cpp  2779.数组的最大美丽值.cpp  2958.最多-k-个重复元素的最长子数组.cpp  395.至少有-k-个重复字符的最长子串.cpp  567.字符串的排列.cpp  README.md
algorithms/leetcode/6-back-track/: README.md
algorithms/leetcode/7-dp/: 509.斐波那契数.cpp  README.md
algorithms/leetcode/8-graph/: 1135.最低成本连通所有城市.cpp  1254.统计封闭岛屿的数目.cpp  130.被围绕的区域.cpp  1584.连接所有点的最小费用-kruskal.cpp  1584.连接所有点的最小费用-prim.cpp  207.课程表-bfs-topo.cpp  207.课程表-dfs-topo.cpp  210.课程表-ii.cpp  277.搜寻名人.cpp  785.判断二分图.cpp  797.所有可能的路径.cpp  886.可能的二分法.cpp  Dijkstra.cpp  Floyd-Warshall.cpp
algorithms/leetcode/9-priority-queue/: 378.有序矩阵中第-k-小的元素.cpp
algorithms/leetcode/back-track/: 131.分割回文串.cpp  78.子集.cpp  README.md
algorithms/leetcode/binary-search/: README.md
algorithms/leetcode/dp/: 198.打家劫舍.cpp  README.md
algorithms/leetcode/interval/: 1288.删除被覆盖区间.cpp
algorithms/leetcode/linked-list/: 203.移除链表元素.cpp
algorithms/leetcode/priority-queue/: 373.查找和最小的-k-对数字.cpp
algorithms/leetcode/queue/: 239.滑动窗口最大值.cpp  README.md
algorithms/leetcode/sliding-window/: 1004.最大连续-1-的个数-iii.cpp  1658.将-x-减到-0-的最小操作数.cpp  209.长度最小的子数组.cpp  219.存在重复元素-ii.cpp  220.存在重复元素-iii.cpp  2302.统计得分小于-k-的子数组数目.cpp  2730.找到最长的半重复子字符串.cpp  2962.统计最大元素出现至少-k-次的子数组.cpp  3.无重复字符的最长子串.cpp  424.替换后的最长重复字符.cpp  438.找到字符串中所有字母异位词.cpp  560.和为-k-的子数组.cpp  713.乘积小于-k-的子数组.cpp  76.最小覆盖子串.cpp
algorithms/leetcode/stack/: 42.接雨水.cpp  496.下一个更大元素-i.cpp  739.每日温度-left-to-right.cpp
algorithms/leetcode/the-shortest-path-BFS/: 752.打开转盘锁.cpp
algorithms/leetcode/traverse-2d-array/: 54.螺旋矩阵.cpp  59.螺旋矩阵-ii.cpp
algorithms/leetcode/tree/: 100.相同的树.cpp  102.二叉树的层序遍历.cpp  README.md  (+6 more)
algorithms/online-judge/: CMakeLists.txt  README.md
algorithms/play-with-data-structure/: README.md
config/: .bashrc  .tmux.conf  .zshrc  keybindings.json  py_debug_launch.json  settings.json
config/nvim/: init.lua  lazy-lock.json
cpp/cmake/cmake_notes/: CMakeLists.txt  README.md
cpp/cmake/cmake_notes/lesson1_2/: CMakeLists.txt
cpp/cmake/cmake_notes/lesson2_2/: CMakeLists.txt
cpp/cmake/cmake_notes/lesson2_2/add/: add.cpp  add.h
cpp/cmake/cmake_notes/lesson2_opencv/: CMakeLists.txt
cpp/cmake/cmake_notes/lesson3_1/: CMakeLists.txt
cpp/cmake/cmake_notes/lesson3_1/add/: CMakeLists.txt  add.cpp
cpp/cmake/cmake_notes/lesson3_1/calculator/: CMakeLists.txt
cpp/cmake/cmake_notes/lesson3_1/common/: CMakeLists.txt  common.cpp
cpp/cmake/cmake_notes/lesson4_1/: CMakeLists.txt
cpp/cmake/cmake_notes/lesson4_1/calculator/: CMakeLists.txt  calculator.h
cpp/cmake/cmake_notes/lesson4_1/common/: CMakeLists.txt  common.h
cpp/cpp-in-cpu-view/: 2.3-goto.cpp  2.7-数组越界.cpp  2.8-引用.cpp  2.9-i++和++i.cpp
cuda/: CMakeLists.txt
cuda-mode/: README.md
cuda-mode/lecture-001/: README.md
cuda/0_hello_world/: CMakeLists.txt  hello_world.cu  test.cu
cuda/1_gemm/: 0_NaiveGEMM.cu  1_BlockGEMM_v1.cu  2_GEMM_can_run.cu  CMakeLists.txt
cuda/2_cublas/: CMakeLists.txt  CublasUtility.h  GEMM_cublas.cu  MyCublas.cu  MyCublas.cuh  main.cu
cuda/3_cudnn/: CMakeLists.txt  conv.cu  convBackward_cudnn.cu  convForward_cudnn.cu  maxpooling_cudnn.cu  utils.h
cuda/3_sum_arrays/: sum_arrays.cu
cuda/4_tensorrt/: CMakeLists.txt  sampleMNIST.cpp  sampleOnnxMNIST.cpp
cuda/include/: fileLock.h  freshman.h  matrix.h
flash-attn/: flash_attn.ipynb
language/cpp/cmake/cmake_notes/lesson2_1/: CMakeLists.txt  main.cpp
language/cpp/cmake/cmake_notes/lesson2_1/lib/: add_static.lib
language/cpp/cmake/cmake_notes/lesson3_1/sub/: CMakeLists.txt
language/cpp/cmake/cmake_notes/lesson4_opencv/: CMakeLists.txt  main.cpp
libtorch/: CMakeLists.txt  tensor_add_example.cpp
llm/deepseek/: deepseek_moe.py  ep_deepseekmoe.py
llm/kv-cache/: kv-cache.ipynb
llm/mixtral/: ep_mixtral.py
llm/transformer/: attention.py  test.py
megatron-lm-2.5-reading/megatron/: arguments.py  initialize.py
ml/flash-attn/: flash_attn.ipynb
ml/pytorch/: torch-save-load.py
nccl/: CMakeLists.txt  demo1.cpp
paddle/: share_buffer_demo.py  tensor_item.py
paddle/distributed/: send_recv.py  test_pp_unbalanced_scheduler.py
project/library-manage-app/: BookStorageViewer.py  MainWindow.py  README.md  SignUp.py  addBookDialog.py  borrowBookDialog.py  changePasswordDialog.py
pybind-example/: README.md
pybind-example/sparrow/: CMakeLists.txt
pybind-example/sparrow/_lib/src/LinearModel/: CMakeLists.txt
pybind-example/sparrow/_lib/src/OtherModule/: CMakeLists.txt
pybind-example/sparrow/models/: LinearModel.py
python/: dataclass_field.py
python/numpy/: extend.py
python/pytest/: README.md
python/python-basic/: README.md  assert.py  compare_op.py
pytorch/profiler/: stream.py
pytorch/tensor/: extending_torch_tensor.py  flatten.py  hook.py  reapeat_interleave.py
shell/: 1_relative_path.sh
shell/scripts/: test_relative_path.sh
tools/git-rebase/: 01-modify-commit-message.md  02-squash-multiple-commits.md  03-exchange-commit-order.md
tools/vscode/: 01-debug-python-in-vscode.md
vim/: .vimrc
(+908 files in other folders)
