cmake_minimum_required(VERSION 3.16)
project(1_gemm CUDA)
set(CMAKE_CUDA_STANDARD 17)
if(NOT DEFINED CMAKE_CUDA_ARCHITECTURES)
    set(CMAKE_CUDA_ARCHITECTURES 70 75 80)
endif(NOT DEFINED CMAKE_CUDA_ARCHITECTURES)
add_executable(gemm_v0 0_NaiveGEMM.cu)
add_executable(gemm_v1 1_BlockGEMM_v1.cu)
add_executable(gemm_v2 2_GEMM_can_run.cu)
target_link_libraries(gemm_v2 cublas)