cmake_minimum_required(VERSION 3.16)
project(3_cudnn CUDA)
if(NOT DEFINED CMAKE_CUDA_ARCHITECTURES)
    set(CMAKE_CUDA_ARCHITECTURES 70 75 80)
endif(NOT DEFINED CMAKE_CUDA_ARCHITECTURES)
set(CMAKE_CUDA_STANDARD 17)
include_directories(.)
add_executable(maxpooling maxpooling_cudnn.cu)
add_executable(conv convBackward_cudnn.cu)
add_executable(conv2 convForward_cudnn.cu)

target_link_libraries(conv cudnn)
target_link_libraries(conv2 cudnn)
target_link_libraries(maxpooling cudnn)
